<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/delivered"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_sent_successfully"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_have_sent_you_an_one_time_password_on_this_mobile_number"
            android:textColor="@color/textSecondary"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/enter_otp"
            android:textColor="@color/textPrimary"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/_0"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:textSize="24sp"/>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_t_receive_the_otp"
                android:textColor="@color/textSecondary"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_VerifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="30dp"
            android:background="@drawable/btn_background"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>